# setdiff

./: README.md  pyproject.toml
sett/: __init__.py
tests/: test_sett.py
