[tool.poetry]
name = "sett"
version = "1.0.0"
description = "Sizes of sets of lines of two files"
authors = ["Ondřej Měkota <ondrej.mekota@me.com>"]
homepage = "https://github.com/pixelneo/sett"
repository = "https://github.com/pixelneo/sett"
classifiers = [
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
sett = 'sett.sett:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
